--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "FastDrones",
-    "description": "This mod increases the speed of Mecha Drones by a set amount (default: 45). It also decreases energy usage of drones by a set factor (default: 5)",
+    "description": "This mod increases the speed of Mecha Drones by a set amount (default: 42.0). It also decreases energy usage of drones by a set factor (default: 50.0)",
     "version_number": "0.0.1",
-    "dependencies": [],
+    "dependencies": ["xiaoye97-BepInEx-5.4.5"],
     "website_url": "https://github.com/dkoppstein/FastDrones"
 }
