--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "FastDrones",
-    "description": "This mod increases the speed of Mecha Drones by a set amount (default: 42.0). It also decreases energy usage of drones by a set factor (default: 50.0)",
-    "version_number": "0.0.1",
+    "description": "This mod increases the speed of Mecha Drones to 59.0 (capped at 59.0 until developers enable faster speeds). It also decreases energy usage of drones by a set factor (default: 50.0).",
+    "version_number": "0.0.2",
     "dependencies": ["xiaoye97-BepInEx-5.4.5"],
-    "website_url": "https://github.com/dkoppstein/FastDrones"
+    "website_url": "https://github.com/dkoppstein/DSP_FastDrones"
 }
